# ormar_first_project

./: .gitignore  main.py  pyproject.toml
src/apps/: routers.py
src/apps/board/: models.py  routers.py  schemas.py  service.py
src/apps/board/endpoind/: category.py  project.py  toolkit.py
src/config/: settings.py
src/tests/: test_proj.py
